# polars-mas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
benchmarks/: README.md  benchmark_covariate_scaling_50_python.py  benchmark_covariate_scaling_50_r.R  benchmark_memory_sample_scaling_python.py  benchmark_memory_sample_scaling_r.R  benchmark_memory_scaling_python.py  benchmark_memory_scaling_r.R  benchmark_sample_scaling_python.py  benchmark_sample_scaling_r.R  example_command.sh  generate_examples.R
src/aurora/: __init__.py  consts.py  main.py  main_logic.py  model_funcs.py  polars_aurora.py
src/polars_mas/: __init__.py  analysis.py  cli.py  config.py  main.py  mas.py  mas_frame.py  model_funcs.py  models.py  new__init__.py  pipeline.py  postprocessing.py  preprocessing.py
src/polars_mas/models/: __init__.py  firth.py
src/tests/: run_benchmarks.sh  run_logistf.R
