[project]
name = "aurora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firthlogist>=0.5.0",
    "polars>=1.9.0",
]

[project.scripts]
hello = "aurora:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
