[project]
name = "aurora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firthlogist>=0.5.0",
    "loguru>=0.7.2",
    "polars>=1.9.0",
]

[project.scripts]
aurora = "aurora:run_aurora"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 105