[project]
name = "polars-mas"
version = "0.2.2"
description = "polars-mas - a fast multiple association library for python backed by polars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firthmodels>=0.2.0",
    "loguru>=0.7.2",
    "polars>=1.9.0",
    "statsmodels>=0.14.4",
]

[project.scripts]
polars-mas = "polars_mas:main"
polars-mas-test = "polars_mas.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 105

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.9",
]
